# nrfeather-enviro-

./: Makefile  README.md  air_quality.py  code.py  environmental_sensing_service.py  enviroplus_sensor_measurement.py  pyproject.toml
examples/: bme280_simple.py  ltr559_simpletest.py  particulate_sensor.py  plotter_bme280.py  plotter_gas.py  plotter_light_and_sound.py  plotter_particulate.py  plotter_test.py  plotters_combined.py  screen.py  test_all.py
examples/ble/: BLE Client.py  BLE Peripheral.py  code.py
